# Tectonic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Animation.h  Animator.h  Bone.h  Camera.h  Cursor.h  GameCamera.h  Keyboard.h  LightingShader.h  LightingTechnique.h  Logger.h  Material.h  Mesh.h  Model.h  PickingTexture.h  Renderer.h  Scene.h  SceneTypes.h  Shader.h  ShadowMapFBO.h  ShadowMapShader.h  StackedIndex.h  Technique.h  Terrain.h  Texture.h  TextureDefines.h  Transformation.h  Window.h  config_defs.h  exceptions.h  linmath.h  texture_defines.h  utils.h
include/camera/: Camera.h  GameCamera.h
include/connector/: Signal.h  Slot.h
include/defs/: ConfigDefs.h  ShaderDefines.h  TextureDefs.h
include/engine/: Animatrix.h  EngineCore.h  TecCache.h  Window.h
include/engine/model/: AssimpLoader.h  Material.h  Model.h  ModelTypes.h  gltf2tec.h
include/engine/model/anim/: Animation.h  Animator.h  Bone.h  SkinnedModel.h
include/engine/model/terrain/: LODManager.h  Ocean.h  Skybox.h  Terrain.h
include/engine/model/texture/: CubemapTexture.h
include/engine/vulkan/: VktBuffers.h  VktCache.h  VktCore.h  VktCubemaps.h  VktDeletableQueue.h  VktDescriptorUtils.h  VktDescriptors.h  VktImages.h  VktInstantCommands.h  VktLoader.h  VktPipelines.h  VktSkybox.cpp  VktSkybox.h  VktStructs.h  VktTypes.h  VktUtils.h  VulkanCore.h  VulkanDescriptors.h  VulkanDestructQueue.h  VulkanLoader.h  VulkanPipelines.h  VulkanStructs.h  VulkanTypes.h  VulkanUtils.h
include/meta/: Signal.h  Slot.h  meta.h
include/model/: Animation.h  Animator.h  AssimpLoader.h  Bone.h  Material.h  Model.h  ModelTypes.h  SkinnedModel.h  Terrain.h  Texture.h
include/model/anim/: Animation.h  SkinnedModel.h
include/model/terrain/: LODManager.h  Ocean.cpp  Ocean.h  Skybox.h  Terrain.h
include/model/texture/: CubemapTexture.h  Texture.h
include/shader/: DebugShader.h  LightingShader.h  PickingShader.h  Shader.h  SkyboxShader.cpp  SkyboxShader.h  TerrainShader.h
include/shader/shadow/: ShadowCubeMapFBO.h  ShadowMapFBO.h  ShadowMapShader.h
include/utils/: Serial.h  SerialTypes.h  Utils.h  utils.h
meshes/: ceramic_vase.mtl  concrete_cat.mtl  cube.tecm  jagged-hills.mtl  monkey.mtl  mount.blend1.mtl  rubber_duck.mtl  wine_barrel.mtl
oldshaders/frag/: debug.frag  lighting.frag  picking.frag  shadow.frag  terrain.frag
oldshaders/geom/: debug.geom
oldshaders/inc/: boneTransformation.glsl
oldshaders/vert/: debug.vert  lighting.vert  picking.vert  shadow.vert  skybox.vert  terrain.vert
shaders/: coloredTriangle.vert  coloredTriangleMesh.vert  coloredTriangleMesh.vert.spv  debug.frag  debug.vert  gradient_color.comp  ibl_baking.frag  ibl_baking.geom  ibl_baking.vert  inputLayouts.glsl  input_layouts.glsl  lighting.frag  lighting.fs  lighting.vert  lighting.vs  mesh.frag  mesh.vert  mesh_skin.vert  ocean.comp  ocean.comp.spv  picking.frag  picking.vert  primitives.glsl  primitives_skin.glsl  shadow.fs  shadow.vert  shadow.vs  shadow_simple.vs  skybox.frag  skybox.vert  star_next.comp  star_next.comp.spv  texImage.frag
shaders/debug/: line.vert  mesh.frag  normal.geom  normal.vert  normal_skin.geom  normal_skin.vert  point_primitives.glsl
shaders/frag/: skybox.frag
shaders/ibl/: ibl.geom  ibl.vert  ibl_brdf.comp  ibl_diffuse.frag  ibl_specular.frag
shaders/inc/: buffersLayout.glsl
src/: Animation.cpp  Animator.cpp  Animatrix.cpp  AssimpLoader.cpp  Bone.cpp  Camera.cpp  CubemapTexture.cpp  Cursor.cpp  DebugShader.cpp  EngineCore.cpp  GameCamera.cpp  Keyboard.cpp  LODManager.cpp  LightingShader.cpp  LightingTechnique.cpp  Logger.cpp  Material.cpp  Mesh.cpp  Model.cpp  PickingShader.cpp  PickingTexture.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  ShadowCubeMapFBO.cpp  ShadowMapFBO.cpp  ShadowMapShader.cpp  SkinnedModel.cpp  Skybox.cpp  SkyboxShader.cpp  TecCache.cpp  Technique.cpp  Terrain.cpp  TerrainShader.cpp  Texture.cpp  Transformation.cpp  Utils.cpp  VkBootstrap.cpp  VktBuffers.cpp  VktCache.cpp  (+27 more)
tools/: ktx_create_cubemap.sh
